# mcp-tap

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/agents/: api-craft-expert.md  cicd-deployment-architect.md  clean-architecture-designer.md  db-performance-architect.md  debug-detective.md  design-system-architect.md  innovation-lab.md  llm-integration-architect.md  orchestration-architect.md  perf-optimizer.md  playwright-e2e-architect.md  premium-ui-designer.md  product-strategy-advisor.md  python-craftsman.md  refactoring-specialist.md  test-architect.md  ux-simplifier.md
.github/workflows/: ci.yml  publish.yml
docs/: CREATIVE_BRIEF.md
docs/architecture/: ARCHITECTURE.md
docs/experiments/: 2026-02-20_dynamic-discovery-deep-dive.md
docs/handoff/: 2026-02-19_1800_audit-and-registry-fix.md  2026-02-19_1800_issues-1-to-5-complete.md  2026-02-19_2100_fase0-complete-fase2-in-progress.md  2026-02-19_2100_issues-6-8-complete.md  2026-02-19_2200_v01-launch-and-self-healing.md  2026-02-19_2400_lockfile-complete-all-merged.md  2026-02-20_0310_v030-release-workflow-npm.md  (+5 more)
npm-wrapper/: README.md  package.json
tests/: conftest.py  smoke_test.py  test_config.py  test_conflicts.py  test_connection.py  test_credentials.py  test_detection.py  test_differ.py  test_discovery_engine.py  test_evaluation.py  test_healing.py  test_http_reachability.py  test_inspector.py  test_installers.py  test_lockfile.py  test_matching.py  test_models.py  test_production_feedback.py  test_recommendation_benchmark.py  test_registry.py  test_registry_aggregator.py  test_release_client_matrix.py  test_release_smoke.py  test_restore.py  test_scanner.py  test_scoring.py  test_security_gate.py  test_server.py  test_smithery_client.py  test_smithery_installer.py  test_stacks.py  test_subprocess.py  test_tools_configure.py  test_tools_health.py  test_tools_list.py  test_tools_remove.py  test_tools_scan.py  test_tools_search.py  test_tools_test.py  test_verify.py  (+2 more)
tests/fixtures/python_fastapi_project/: .env.example  docker-compose.yml  pyproject.toml
(+181 files in other folders)
