[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tap"
version = "0.5.3"
description = "The last MCP server you install by hand. Discover, install, and configure MCP servers from inside your AI assistant."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Felipe Stenzel" },
]
keywords = ["mcp", "model-context-protocol", "ai", "tools", "discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.12.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
mcp-tap = "mcp_tap:main"

[project.urls]
Homepage = "https://github.com/felipestenzel/mcp-tap"
Repository = "https://github.com/felipestenzel/mcp-tap"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.15",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tap"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
