[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-fastapi-app"
version = "1.0.0"
description = "A realistic FastAPI project for testing"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.5.3",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.2.0",
    "slack-sdk>=3.27.0",
]
